--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "5.2.3",
+    "@capacitor/device": "^5.0.6",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/preferences": "^5.0.6",
@@ -24,6 +25,7 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-blurhash": "^0.3.0",
