--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
+    "blurhash": "^2.0.5",
     "date-fns": "^2.30.0",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "swiper": "^10.2.0"
