--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "blurhash": "^2.0.5",
     "date-fns": "^2.30.0",
     "ionicons": "^7.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "react-spinners": "^0.13.8",
     "swiper": "^10.2.0"
   },
   "devDependencies": {
@@ -42,6 +44,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-legacy": "^4.0.2",
