--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@capacitor/android": "^5.3.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.7",
-    "@capacitor/core": "5.2.3",
+    "@capacitor/core": "^5.3.0",
     "@capacitor/device": "^5.0.6",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "^5.3.0",
