--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@capacitor/android": "^5.3.0",
+    "@capacitor/android": "5.2.3",
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "^5.3.0",
     "@capacitor/device": "^5.0.6",
     "@capacitor/haptics": "5.0.6",
-    "@capacitor/ios": "^5.3.0",
+    "@capacitor/ios": "5.2.3",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
