--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "react-spinners": "^0.13.8",
