--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ionic/pwa-elements": "^3.2.2",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
@@ -33,6 +35,7 @@
     "date-fns": "^2.30.0",
     "ionicons": "^7.0.0",
     "jwt-decode": "^3.1.2",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.2.0",
     "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
