--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^1.4.0",
     "blurhash": "^2.0.5",
     "date-fns": "^2.30.0",
+    "hex-color-to-color-name": "^1.0.2",
     "ionicons": "^7.0.0",
     "jwt-decode": "^3.1.2",
     "pdfjs-dist": "^3.11.174",
@@ -63,6 +64,7 @@
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^22.1.0",
+    "terser": "^5.30.3",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
     "vitest": "^0.32.2"
