--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.2.3",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/network": "^5.0.6",
     "@capacitor/preferences": "^5.0.6",
     "@capacitor/push-notifications": "^5.1.0",
     "@capacitor/splash-screen": "^5.0.6",
